<resources>
    <string name="app_name">HelloAndroidView</string>
    <string name="button_name">button</string>
    <string name="login_button_name">Login</string>
    <string name="constrain_layout_button_name">constrain_layout</string>
    <string name="pick_contact_button_name">pick_contact</string>
    <string name="fragment_button_name">fragment</string>
    <string name="recycler_view_button_name">RecyclerView</string>
    <string name="thread_button_name">Thread</string>
    <string name="shared_preference_button_name">Shared_Preference</string>
    <string name="data_store_button_name">Data_Store</string>
    <string name="hello">Hello!</string>
    <string name="logo">Logo</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="or_connect_with">or connect with</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="android_content">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="android">Android</string>
    <string name="java">Java</string>
    <string name="java_content">Java is a High Level, class-based, object-oriented programming language that is designed to have\nas few implementation dependencies as possible.</string>
    <string name="avatar">avatar</string>
    <string name="no_more_data">到底了</string>
    <string name="tips">提示信息：</string>
    <string name="tips_content">点击“知道了”不再提示。</string>
    <string name="welcome">欢迎您回来</string>
    <string name="got_it">知道了</string>
    <string name="is_hint_shown">isHintShown</string>
</resources>